@@ -1,7 +1,7 @@
 dnl IR toolkit for tcl/tk
-dnl (c) Index Data 1996
+dnl (c) Index Data 1996-1997
 dnl See the file LICENSE for details.
-dnl $Id: configure.in,v 1.20 1997-04-13 19:00:42 adam Exp $
+dnl $Id: configure.in,v 1.21 1997-04-30 07:26:07 adam Exp $
 AC_INIT(ir-tcl.h)
 CC=${CC-cc}
 dnl ------ Substitutions
@@ -15,6 +15,11 @@ AC_SUBST(MOSI)
 AC_SUBST(MOSIDIR)
 AC_SUBST(MOSILIB)
 AC_SUBST(MOSIINC)
+AC_SUBST(SHLIB_CFLAGS)
+AC_SUBST(SHLIB_LD)
+AC_SUBST(SHLIB_SUFFIX)
+AC_SUBST(SHLIB_VERSION)
+AC_SUBST(SHLIB_IRTCL)
 dnl
 dnl ------ Preliminary settings
 AC_PROG_INSTALL
@@ -78,8 +83,18 @@ if test -r ${tryprefix}/lib/tclConfig.sh; then
 	TCLLIB="${TCL_LIB_SPEC} ${TCL_LIBS}"
 	TCLINC=-I${TCL_PREFIX}/include
 	RANLIB=$TCL_RANLIB
+        SHLIB_CFLAGS=$TCL_SHLIB_CFLAGS
+	SHLIB_LD=$TCL_SHLIB_LD
+	SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
+	SHLIB_VERSION=$TCL_SHLIB_VERSION
+	SHLIB_IRTCL=irtcl${TCL_SHLIB_SUFFIX}
 	AC_MSG_RESULT($TCL_VERSION)
 else
+        SHLIB_CFLAGS=""
+	SHLIB_LD="shared-linker"
+	SHLIB_SUFFIX=""
+	SHLIB_VERSION=""
+	SHLIB_IRTCL="irtcl-shared"
 	AC_PROG_RANLIB
 	checkBoth=0
 	AC_CHECK_FUNC(connect, tk_checkSocket=0, tk_checkSocket=1)
